--- a/.github/workflows/BuildRelease.yml
+++ b/.github/workflows/BuildRelease.yml
@@ -23,7 +23,7 @@ jobs:
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: |
           cd ./SDK/tools
-          LLPeEditor.exe -l -o ..\Lib -exe .\server\bedrock_server.exe -pdb .\server\bedrock_server.pdb
+          .\LLPeEditor.exe -l -o ..\Lib -exe .\server\bedrock_server.exe -pdb .\server\bedrock_server.pdb
         shell: cmd
 
       - name: Build
