--- a/.github/workflows/BuildRelease.yml
+++ b/.github/workflows/BuildRelease.yml
@@ -23,8 +23,8 @@ jobs:
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: |
           cd ./SDK/tools
-          .\LLPeEditor.exe -l -o ..\Lib -exe .\server\bedrock_server.exe -pdb .\server\bedrock_server.pdb
-        shell: cmd
+          ./LLPeEditor.exe -l -o ..\Lib -exe .\server\bedrock_server.exe -pdb .\server\bedrock_server.pdb
+        shell: bash
 
       - name: Build
         working-directory: ${{env.GITHUB_WORKSPACE}}
